Made the thing scalable

--- a/styles.css
+++ b/styles.css
@@ -57,25 +57,26 @@ button:hover {
 }
 
 .contentBox {
-    margin: 10em;
     margin-top: 15em;
     width: auto;
     text-align: center;
-    height: 20em;
     color: #EDF2F4;
+    justify-content: space-evenly;
+    display: flex;
+    height: auto;
 }
 .content {
     background-size: contain;
     width: auto;
-    margin-left: 6.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
-    margin-right: 6.5em;
     float: left;
     background-color: #2B2D42;
     border-radius: 1em;
     color: #EF233C;
     box-shadow: 0em 0em 7em -2em #2B2D42;
+    justify-content: center;   
+    height: 20em;
 }
 p {
     width: 13em;
