--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,45 @@ button:hover {
 p {
     width: 13em;
 }
+
+.socTitle {
+    text-align: center;
+    height: auto;
+    margin-top: 10em;
+    color: #EF233C;
+}
+
+.socColumn {
+    text-align: center;
+    width: 15em;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: large;
+}
+
+.socLink {
+    width: 15em;
+    border-radius: 100%;
+    margin-top: 7em;
+    transition: box-shadow 1s;
+}
+
+.socLink:hover {
+    box-shadow: 0em 0em 8em -2em #8D99AE;
+}
+
+.gallery {
+    margin-top: 15em;
+    background-size: contain;
+    text-align: center;
+    display: inline-block;    
+}
+img {
+    width: 24%;
+    height: 24%;
+    transition: box-shadow 1s;
+}
+
+img:hover {
+    box-shadow: 0em 0em 15em black;
+}
